@@ -24,6 +24,7 @@ import static com.drdisagree.iconify.config.XPrefs.Xprefs;
 import static de.robv.android.xposed.XposedBridge.hookAllConstructors;
 import static de.robv.android.xposed.XposedBridge.hookAllMethods;
 import static de.robv.android.xposed.XposedBridge.hookMethod;
+import static de.robv.android.xposed.XposedBridge.log;
 import static de.robv.android.xposed.XposedHelpers.callMethod;
 import static de.robv.android.xposed.XposedHelpers.callStaticMethod;
 import static de.robv.android.xposed.XposedHelpers.findAndHookMethod;
@@ -109,14 +110,18 @@ public class QSLightThemeA12 extends ModPack {
         }
 
         try {
-            mBehindColors = GradientColorsClass.newInstance();
-        } catch (Exception e) {
-            e.printStackTrace();
+            mBehindColors = GradientColorsClass.getDeclaredConstructor().newInstance();
+        } catch (Throwable throwable) {
+            log(TAG + throwable);
         }
         hookAllMethods(ScrimControllerClass, "onUiModeChanged", new XC_MethodHook() {
             @Override
             protected void afterHookedMethod(MethodHookParam param) throws Throwable {
-                mBehindColors = GradientColorsClass.newInstance();
+                try {
+                    mBehindColors = GradientColorsClass.getDeclaredConstructor().newInstance();
+                } catch (Throwable throwable) {
+                    log(TAG + throwable);
+                }
             }
         });
 
@@ -125,12 +130,16 @@ public class QSLightThemeA12 extends ModPack {
             protected void afterHookedMethod(MethodHookParam param) throws Throwable {
                 if (!dualToneQSEnabled) return;
 
-                Object mScrimBehind = getObjectField(param.thisObject, "mScrimBehind");
-                boolean mBlankScreen = (boolean) getObjectField(param.thisObject, "mBlankScreen");
-                float alpha = (float) callMethod(mScrimBehind, "getViewAlpha");
-                boolean animateBehindScrim = alpha != 0 && !mBlankScreen;
+                try {
+                    Object mScrimBehind = getObjectField(param.thisObject, "mScrimBehind");
+                    boolean mBlankScreen = (boolean) getObjectField(param.thisObject, "mBlankScreen");
+                    float alpha = (float) callMethod(mScrimBehind, "getViewAlpha");
+                    boolean animateBehindScrim = alpha != 0 && !mBlankScreen;
 
-                callMethod(mScrimBehind, "setColors", mBehindColors, animateBehindScrim);
+                    callMethod(mScrimBehind, "setColors", mBehindColors, animateBehindScrim);
+                } catch (Throwable throwable) {
+                    log(TAG + throwable);
+                }
             }
         });
 
@@ -139,18 +148,22 @@ public class QSLightThemeA12 extends ModPack {
             protected void afterHookedMethod(MethodHookParam param) throws Throwable {
                 if (!dualToneQSEnabled) return;
 
-                @SuppressLint("DiscouragedApi") ColorStateList states = (ColorStateList) callStaticMethod(UtilsClass, "getColorAttr", mContext, mContext.getResources().getIdentifier("android:attr/colorSurfaceHeader", "attr", listenPackage));
-                int surfaceBackground = states.getDefaultColor();
+                try {
+                    @SuppressLint("DiscouragedApi") ColorStateList states = (ColorStateList) callStaticMethod(UtilsClass, "getColorAttr", mContext, mContext.getResources().getIdentifier("android:attr/colorSurfaceHeader", "attr", listenPackage));
+                    int surfaceBackground = states.getDefaultColor();
 
-                ColorStateList accentStates = (ColorStateList) callStaticMethod(UtilsClass, "getColorAccent", mContext);
-                int accent = accentStates.getDefaultColor();
+                    ColorStateList accentStates = (ColorStateList) callStaticMethod(UtilsClass, "getColorAccent", mContext);
+                    int accent = accentStates.getDefaultColor();
 
-                callMethod(mBehindColors, "setMainColor", surfaceBackground);
-                callMethod(mBehindColors, "setSecondaryColor", accent);
+                    callMethod(mBehindColors, "setMainColor", surfaceBackground);
+                    callMethod(mBehindColors, "setSecondaryColor", accent);
 
-                double contrast = ColorUtils.calculateContrast((int) callMethod(mBehindColors, "getMainColor"), Color.WHITE);
+                    double contrast = ColorUtils.calculateContrast((int) callMethod(mBehindColors, "getMainColor"), Color.WHITE);
 
-                callMethod(mBehindColors, "setSupportsDarkText", contrast > 4.5);
+                    callMethod(mBehindColors, "setSupportsDarkText", contrast > 4.5);
+                } catch (Throwable throwable) {
+                    log(TAG + throwable);
+                }
             }
         });
 
@@ -159,10 +172,14 @@ public class QSLightThemeA12 extends ModPack {
             @Override
             protected void afterHookedMethod(MethodHookParam param) throws Throwable {
                 if (!lightQSHeaderEnabled) return;
-                Resources res = mContext.getResources();
 
-                @SuppressLint("DiscouragedApi") int iconColor = mContext.getColor(res.getIdentifier("android:color/system_neutral1_900", "color", mContext.getPackageName()));
-                setObjectField(param.thisObject, "iconColor", iconColor);
+                try {
+                    Resources res = mContext.getResources();
+                    @SuppressLint("DiscouragedApi") int iconColor = mContext.getColor(res.getIdentifier("android:color/system_neutral1_900", "color", mContext.getPackageName()));
+                    setObjectField(param.thisObject, "iconColor", iconColor);
+                } catch (Throwable throwable) {
+                    log(TAG + throwable);
+                }
             }
         });
 
@@ -171,84 +188,96 @@ public class QSLightThemeA12 extends ModPack {
             protected void afterHookedMethod(MethodHookParam param) throws Throwable {
                 if (!lightQSHeaderEnabled) return;
 
-                boolean mClipsQsScrim = (boolean) getObjectField(param.thisObject, "mClipsQsScrim");
-                if (mClipsQsScrim) {
-                    setObjectField(param.thisObject, "mBehindTint", Color.TRANSPARENT);
+                try {
+                    boolean mClipsQsScrim = (boolean) getObjectField(param.thisObject, "mClipsQsScrim");
+                    if (mClipsQsScrim) {
+                        setObjectField(param.thisObject, "mBehindTint", Color.TRANSPARENT);
+                    }
+                } catch (Throwable throwable) {
+                    log(TAG + throwable);
                 }
             }
         });
 
-        Class<?> ScrimStateEnum = findClass("com.android.systemui.statusbar.phone.ScrimState", lpparam.classLoader);
+        try {
+            Class<?> ScrimStateEnum = findClass("com.android.systemui.statusbar.phone.ScrimState", lpparam.classLoader);
 
-        Object[] constants = ScrimStateEnum.getEnumConstants();
-        for (Object constant : constants) {
-            String enumVal = constant.toString();
-            switch (enumVal) {
-                case "KEYGUARD":
-                    findAndHookMethod(constant.getClass(), "prepare", ScrimStateEnum, new XC_MethodHook() {
-                        @Override
-                        protected void afterHookedMethod(MethodHookParam param) throws Throwable {
-                            if (!lightQSHeaderEnabled) return;
+            Object[] constants = ScrimStateEnum.getEnumConstants();
+            for (Object constant : constants) {
+                String enumVal = constant.toString();
+                switch (enumVal) {
+                    case "KEYGUARD":
+                        findAndHookMethod(constant.getClass(), "prepare", ScrimStateEnum, new XC_MethodHook() {
+                            @Override
+                            protected void afterHookedMethod(MethodHookParam param) throws Throwable {
+                                if (!lightQSHeaderEnabled) return;
 
-                            boolean mClipQsScrim = (boolean) getObjectField(param.thisObject, "mClipQsScrim");
-                            if (mClipQsScrim) {
+                                boolean mClipQsScrim = (boolean) getObjectField(param.thisObject, "mClipQsScrim");
+                                if (mClipQsScrim) {
+                                    callMethod(param.thisObject, "updateScrimColor", getObjectField(param.thisObject, "mScrimBehind"), 1f, Color.TRANSPARENT);
+                                }
+                            }
+                        });
+                        break;
+                    case "BOUNCER":
+                        findAndHookMethod(constant.getClass(), "prepare", ScrimStateEnum, new XC_MethodHook() {
+                            @Override
+                            protected void afterHookedMethod(MethodHookParam param) throws Throwable {
+                                if (!lightQSHeaderEnabled) return;
+
+                                setObjectField(param.thisObject, "mBehindTint", Color.TRANSPARENT);
+                            }
+                        });
+                        break;
+                    case "SHADE_LOCKED":
+                        hookAllMethods(constant.getClass(), "prepare", new XC_MethodHook() {
+                            @Override
+                            protected void afterHookedMethod(MethodHookParam param) throws Throwable {
+                                if (!lightQSHeaderEnabled) return;
+
+                                setObjectField(param.thisObject, "mBehindTint", Color.TRANSPARENT);
+
+                                boolean mClipQsScrim = (boolean) getObjectField(param.thisObject, "mClipQsScrim");
+                                if (mClipQsScrim) {
+                                    callMethod(param.thisObject, "updateScrimColor", getObjectField(param.thisObject, "mScrimBehind"), 1f, Color.TRANSPARENT);
+                                }
+                            }
+                        });
+                        hookAllMethods(constant.getClass(), "getBehindTint", new XC_MethodHook() {
+                            @Override
+                            protected void beforeHookedMethod(MethodHookParam param) throws Throwable {
+                                if (!lightQSHeaderEnabled) return;
+                                param.setResult(Color.TRANSPARENT);
+                            }
+                        });
+                        break;
+
+                    case "UNLOCKED":
+                        findAndHookMethod(constant.getClass(), "prepare", ScrimStateEnum, new XC_MethodHook() {
+                            @Override
+                            protected void afterHookedMethod(MethodHookParam param) throws Throwable {
+                                if (!lightQSHeaderEnabled) return;
+
+                                setObjectField(param.thisObject, "mBehindTint", Color.TRANSPARENT);
+
                                 callMethod(param.thisObject, "updateScrimColor", getObjectField(param.thisObject, "mScrimBehind"), 1f, Color.TRANSPARENT);
                             }
-                        }
-                    });
-                    break;
-                case "BOUNCER":
-                    findAndHookMethod(constant.getClass(), "prepare", ScrimStateEnum, new XC_MethodHook() {
-                        @Override
-                        protected void afterHookedMethod(MethodHookParam param) throws Throwable {
-                            if (!lightQSHeaderEnabled) return;
-
-                            setObjectField(param.thisObject, "mBehindTint", Color.TRANSPARENT);
-                        }
-                    });
-                    break;
-                case "SHADE_LOCKED":
-                    hookAllMethods(constant.getClass(), "prepare", new XC_MethodHook() {
-                        @Override
-                        protected void afterHookedMethod(MethodHookParam param) throws Throwable {
-                            if (!lightQSHeaderEnabled) return;
-
-                            setObjectField(param.thisObject, "mBehindTint", Color.TRANSPARENT);
-
-                            boolean mClipQsScrim = (boolean) getObjectField(param.thisObject, "mClipQsScrim");
-                            if (mClipQsScrim) {
-                                callMethod(param.thisObject, "updateScrimColor", getObjectField(param.thisObject, "mScrimBehind"), 1f, Color.TRANSPARENT);
-                            }
-                        }
-                    });
-                    hookAllMethods(constant.getClass(), "getBehindTint", new XC_MethodHook() {
-                        @Override
-                        protected void beforeHookedMethod(MethodHookParam param) throws Throwable {
-                            if (!lightQSHeaderEnabled) return;
-                            param.setResult(Color.TRANSPARENT);
-                        }
-                    });
-                    break;
-
-                case "UNLOCKED":
-                    findAndHookMethod(constant.getClass(), "prepare", ScrimStateEnum, new XC_MethodHook() {
-                        @Override
-                        protected void afterHookedMethod(MethodHookParam param) throws Throwable {
-                            if (!lightQSHeaderEnabled) return;
-
-                            setObjectField(param.thisObject, "mBehindTint", Color.TRANSPARENT);
-
-                            callMethod(param.thisObject, "updateScrimColor", getObjectField(param.thisObject, "mScrimBehind"), 1f, Color.TRANSPARENT);
-                        }
-                    });
-                    break;
+                        });
+                        break;
+                }
             }
+        } catch (Throwable throwable) {
+            log(TAG + throwable);
         }
 
         hookAllConstructors(FragmentHostManagerClass, new XC_MethodHook() {
             @Override
             protected void beforeHookedMethod(MethodHookParam param) throws Throwable {
-                setObjectField(param.thisObject, "mConfigChanges", InterestingConfigChangesClass.getDeclaredConstructor(int.class).newInstance(0x40000000 | 0x0004 | 0x0100 | 0x80000000 | 0x0200));
+                try {
+                    setObjectField(param.thisObject, "mConfigChanges", InterestingConfigChangesClass.getDeclaredConstructor(int.class).newInstance(0x40000000 | 0x0004 | 0x0100 | 0x80000000 | 0x0200));
+                } catch (Throwable throwable) {
+                    log(TAG + throwable);
+                }
             }
         });
 
